--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     </header>
     <main>
         <section class="bg-red-300	mt-8 w-3/4 mx-auto p-8	">
-            <div action="">
+            <form action="">
                 <h3 class="text-2xl mb-4">Please Login</h3>
                 <input class="border-2 border-black	px-2 rounded block w-3/4 mb-4" type="text" name="" id="user-email"
                     placeholder="Your Email">
                 <input class="border-2 border-black	px-2 rounded block w-3/4 mb-4" type="password" name=""
                     id="user-password" placeholder="Password">
                 <button id="login-submit" class="text-white font-bold bg-yellow-500 px-4 py-2 rounded">Submit</button>
-            </div>
+            </form>
         </section>
     </main>
     <script src="js/login.js"></script>
